--- a/env_management/vscode_settings.json
+++ b/env_management/vscode_settings.json
@@ -22,7 +22,7 @@
     "textMateRules": [
       {
         "name": "Bold font",
-        "scope": ["entity.name.method"], //"entity.name.method""meta.function
+        "scope": ["entity.name.method"],
         "settings": {
           "fontStyle": "bold"
         }
